# parr-multi-agent-framework

./: .env.example  .gitignore  BUILDING_AGENTS.md  CLAUDE.md  LICENSE  README.md  plan.md  pyproject.toml
.claude/: settings.local.json
_debug_test_sessions/1c0c0358-dbe4-4d87-a047-fced244901c3/: agent.json  conversation.json  output.json  sub_agents.json  tool_calls.json  workflow.json
_debug_test_sessions/1dd5126d-9ea2-43f8-bb51-a09fd1779771/: agent.json  conversation.json  sub_agents.json  tool_calls.json  workflow.json
_debug_test_sessions/47ed49c7-6ae0-4d7e-a583-94185eba6fc2/: agent.json  conversation.json  tool_calls.json  workflow.json
_debug_test_sessions/8f6b48d2-2f9f-4e2b-a3b5-64052d89fc04/: agent.json  conversation.json  output.json  workflow.json
examples/live_demo/: run.py
examples/research_assistant/: rag_tools.py  run.py
parr/: __init__.py  agent_coordinator.py  agent_runtime.py  budget_tracker.py  compaction_strategy.py  context_manager.py  core_types.py  event_bus.py  event_types.py  framework_tools.py  orchestrator.py  output_validator.py  persistence.py  phase_runner.py  protocols.py  result_cache_middleware.py  stall_detector.py  tool_executor.py  tool_registry.py  trace_store.py
parr/adapters/: __init__.py  document_search_adapter.py  domain_adapter.py  event_sink_adapter.py  llm_adapter.py  llm_rate_limiter.py
parr/config/: __init__.py  budget.yaml  config_loader.py  models.yaml  (+2 more)
tests/: conftest.py  test_batch_operations.py  test_config_loader.py  test_core_types.py  test_event_types.py  test_spawn_policies.py  test_tool_system.py
(+454 files in other folders)
