[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parr-multi-agent-framework"
version = "0.1.0"
description = "A protocol-based multi-agent framework with structured Plan-Act-Review-Report lifecycle."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Apostolis Christou" },
]
keywords = ["agents", "multi-agent", "llm", "orchestration", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "jsonschema>=4.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
all = ["openai>=1.0", "anthropic>=0.20"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "openai>=1.0",
    "anthropic>=0.20",
]

[project.scripts]
parr-ui = "parr.debug_ui.__main__:main"

[project.urls]
Repository = "https://github.com/ApostolisC/parr-multi-agent-framework"

[tool.setuptools.packages.find]
include = ["parr*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["parr/tests", "examples"]
